# fastapi_auth_wrapper

./: .gitignore  .http  LICENSE  README.md  pyproject.toml  rav.yaml
src/examples/: main.py
src/fastapi_auth_wrapper/: __init__.py
src/fastapi_auth_wrapper/clients/: __init__.py  factory.py  main.py
src/fastapi_auth_wrapper/config/: __init__.py  settings.py
src/fastapi_auth_wrapper/dependencies/: __init__.py  index.py
